--- a/tests/datasets/keyframes/duplicates.css
+++ b/tests/datasets/keyframes/duplicates.css
@@ -1,8 +1,17 @@
-@keyframes duplicates_test {
+@keyframes duplicates_test_one {
     0%, 20% {
         transform: translateY(0);
     }
     20% {
+        transform: translateY(10);
+    }
+}
+
+@keyframes duplicates_test_two {
+    0%, 50.1% {
+        transform: translateY(0);
+    }
+    50% {
         transform: translateY(10);
     }
 }
