--- a/tests/datasets/keyframes/duplicates.css
+++ b/tests/datasets/keyframes/duplicates.css
@@ -6,7 +6,7 @@
         transform: translateY(10);
     }
 }
-
+/*
 @keyframes duplicates_test_two {
     0%, 50.1% {
         transform: translateY(0);
@@ -15,3 +15,4 @@
         transform: translateY(10);
     }
 }
+*/
